node-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: "192.168.49.2.nip.io"
    http:
      paths:
      - path: /httpd
        pathType: Prefix
        backend:
          service:
            name: node-apache-service
            port:
              number: 80
